--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "ionic-app-scripts lint"
   },
   "dependencies": {
-    "@angular/animations": "5.2.11",
+    "@angular/animations": "^5.2.11",
     "@angular/common": "5.2.11",
     "@angular/compiler": "5.2.11",
     "@angular/compiler-cli": "5.2.11",
@@ -24,10 +24,17 @@
     "@ionic-native/splash-screen": "~4.17.0",
     "@ionic-native/status-bar": "~4.17.0",
     "@ionic/storage": "2.2.0",
+    "angular-calendar": "^0.26.4",
+    "angular-calendar-week-hours-view": "^1.0.2",
     "angularfire2": "^5.1.1",
     "firebase": "^5.7.0",
+    "intl": "^1.2.5",
     "ionic-angular": "3.9.2",
+    "ionic2-calendar": "^0.4.6",
+    "ionic3-calendar": "^1.1.6",
+    "ionic3-calendar-en": "^1.1.3",
     "ionicons": "3.0.0",
+    "moment": "^2.23.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
